<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PDF转换工具</string>
    <string name="pdf_to_image">PDF转图片</string>
    <string name="image_to_pdf">图片转PDF</string>
    <string name="pdf_to_text">PDF转文本</string>
    <string name="text_to_pdf">文本转PDF</string>
    <string name="merge_pdf">合并PDF</string>
    <string name="split_pdf">拆分PDF</string>
    <string name="compress_pdf">压缩PDF</string>
    <string name="select_pdf_file">选择PDF文件</string>
    <string name="select_image">选择图片</string>
    <string name="select_images">选择多张图片</string>
    <string name="start_convert">开始转换</string>
    <string name="save_to">保存到</string>
    <string name="output_format">输出格式</string>
    <string name="quality">质量</string>
    <string name="page_range">页码范围</string>
    <string name="all_pages">全部页面</string>
    <string name="custom_range">自定义范围</string>
    <string name="password">密码</string>
    <string name="password_hint">如有密码请输入</string>
    <string name="convert_success">转换成功</string>
    <string name="convert_failed">转换失败</string>
    <string name="file_saved_at">文件已保存到</string>
    <string name="input_text_hint">请输入要转换为PDF的文本内容…</string>
    <string name="merge_hint">请选择2个或更多PDF文件进行合并</string>
    <string name="split_hint">请选择要拆分的PDF文件</string>
    <string name="compress_hint">请选择要压缩的PDF文件</string>
    <string name="select_folder">选择保存文件夹</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="no_file_selected">未选择文件</string>
    <string name="add_file">添加文件</string>
    <string name="remove">移除</string>
    <string name="page_count">共 %d 页</string>
    <string name="file_size">文件大小</string>
</resources>
